AC_INIT([tower-defense], [0.1])

AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE([foreign subdir-objects])
AM_CONFIG_HEADER([config.h:config.in])

AC_PROG_CC

AC_HEADER_STDC
AC_HEADER_STDBOOL

AC_FUNC_MALLOC

AC_CHECK_LIB([SDL], [SDL_Init])
AC_CHECK_LIB([SDL_image], [SDL_Load])

dnl
dnl Configure for target platform
dnl

case "$target_os" in
  darwin* | rhapsody*)
  	LDFLAGS="-framework Cocoa"
    AC_SUBST(PLATFORM,"mac")
    ;;
  linux* | solaris*)
    AC_SUBST(PLATFORM,"linux")
    ;;
  *)
    ;;
esac

CUNIT_LDFLAGS=""
AC_CHECK_HEADER([CUnit/CUnit.h], [ 
	AC_CHECK_LIB([cunit], [CU_initialize_registry], [CUNIT_LDFLAGS=-lcunit],
		[AC_MSG_WARN([could not locate CUnit required for unit tests])]) 
	], 
	[ 
	AC_MSG_WARN([could not locate CUnit required for unit tests]) 
	]) 

AC_SUBST([CUNIT_LDFLAGS]) 

AC_CONFIG_FILES([
	Makefile
	src/Makefile
	test/Makefile
	Doxyfile
])

AC_OUTPUT
