bin_PROGRAMS = towerdefense

towerdefense_SOURCES = main.c \
enemy/enemy.c \
enemy/typeEn.c \
map/map.c \
tower/bullet.c \
tower/tower.c \
tower/typeBul.c \
tower/typeTo.c \
utils/viewport.c \
utils/menu.c \
event/event.c \
list/list.c \
utils/pathFinding.c \
utils/button.c


AM_CFLAGS=-Wall -std=c99

towerdefense_LDADD = -lSDLmain -lSDL -lSDL_image
